// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal renders properly 1`] = `
<div
  aria-describedby="dialog-desc"
  aria-hidden="true"
  aria-labelledby="dialog-title"
  aria-modal="true"
  className="c-dialog"
  id="dialog"
  role="dialog"
  tabIndex="-1"
>
  <div
    className="c-dialog__box"
    role="document"
  >
    <button
      aria-label="Close"
      className="btnClose"
      onClick={[Function]}
      title="Close window"
      type="button"
    >
      X
    </button>
    <h2
      id="dialog-title"
    >
      This is my fake title
    </h2>
    <p
      id="dialog-desc"
    >
      This is my fake description
    </p>
  </div>
</div>
`;

exports[`When user click on a button and modal should be displaying should render a Modal 1`] = `
<div
  aria-describedby="dialog-desc"
  aria-hidden="true"
  aria-labelledby="dialog-title"
  aria-modal="true"
  className="c-dialog"
  id="dialog"
  role="dialog"
  tabIndex="-1"
>
  <div
    className="c-dialog__box"
    role="document"
  >
    <button
      aria-label="Close"
      className="btnClose"
      onClick={[Function]}
      title="Close window"
      type="button"
    >
      X
    </button>
    <h2
      id="dialog-title"
    >
      This is my fake title
    </h2>
    <p
      id="dialog-desc"
    >
      This is my fake description
    </p>
  </div>
</div>
`;

exports[`When user click on a button and modal shouldn't be displaying should not render a Modal 1`] = `
<div
  aria-describedby="dialog-desc"
  aria-hidden="false"
  aria-labelledby="dialog-title"
  aria-modal="true"
  className="c-dialog"
  id="dialog"
  role="dialog"
  tabIndex="-1"
>
  <div
    className="c-dialog__box"
    role="document"
  >
    <button
      aria-label="Close"
      className="btnClose"
      onClick={[Function]}
      title="Close window"
      type="button"
    >
      X
    </button>
    <h2
      id="dialog-title"
    >
      This is my fake title
    </h2>
    <p
      id="dialog-desc"
    >
      This is my fake description
    </p>
  </div>
</div>
`;
